--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 
-	<title>HUMIRA Touchpoint Ecosystem</title>
+	<title>HS Ecosystem</title>
 
 	<link rel='stylesheet' type='text/css' href='css/style.css' />
 	<link rel='stylesheet' type='text/css' href='css/jquery-ui.css' />
